# python-modules

born2beroot-read-me/: README.md
module-00/: README.md
module-00/ex1/: ft_garden_name.py
module-00/ex3/: ft_harvest_total.py
module-00/ex5/: ft_count_harvest_iterative.py  ft_water_reminder.py
module-00/ex6/: ft_count_harvest_recursive.py  ft_garden_summary.py
module-00/ex7/: ft_seed_inventory.py
module-01/: README.md
module-01/ex1/: ft_garden_data.py
module-01/ex2/: ft_plant_growth.py
module-01/ex3/: ft_plant_factory.py
module-01/ex4/: ft_garden_security.py
module-01/ex5/: ft_plant_types.py
module-01/ex6/: ft_garden_analytics.py
module-02/: README.md
module-02/ex0/: ft_first_exception.py
module-02/ex1/: ft_different_errors.py  ft_raise_exception.py
module-02/ex2/: ft_different_errors.py
module-02/ex3/: ft_custom_errors.py  ft_finally_block.py
module-02/ex4/: ft_finally_block.py  ft_raise_errors.py
module-02/ex5/: ft_garden_management.py
module-03/: README.md
module-03/ex0/: ft_command_quest.py
module-03/ex1/: ft_score_analytics.py
module-03/ex2/: ft_coordinate_system.py
module-04/: README.md
module-05/: README.md
module-06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
module-07/: README.md  battle.py  capacitor.py  tournament.py
module-08/: README.md
module-08/ex1/: loading.py  pyproject.toml  requirements.txt
(+37 files in other folders)
